# evm-sdk

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.docs/: README.template.md  clients.yaml  examples.yaml
.docs/contracts/read-feed/: README.template.md
.docs/contracts/read-feed-aggregator-v3/: README.template.md
.docs/javascript/evm.js/: README.template.md
.docs/solidity/ILegacyOracle/: README.template.md
.docs/solidity/ISwitchboard/: README.template.md
.github/workflows/: copybara.yml
contracts/: Aggregator.sol  FunctionsClient.sol  ISwitchboard.sol  Switchboard.template.sol
contracts/arbitrum/mainnet/: Switchboard.sol
contracts/arbitrum/testnet/: Switchboard.sol
contracts/core/: Switchboard.sol
contracts/read-feed/: README.md  package.json  tsconfig.json
contracts/read-feed-aggregator-v3/: README.md  hardhat.config.ts  package.json
contracts/read-feed-aggregator-v3/contracts/: read.sol
contracts/read-feed-aggregator-v3/typechain-types/: ISwitchboard.ts
contracts/read-feed/contracts/: ISwitchboard.sol  read.sol
contracts/read-feed/deployments/: ReadAFeed.json  contract-address.json
contracts/read-feed/typechain-types/: hardhat.d.ts  index.ts
examples/01_randomness_callback/: Dockerfile  Dockerfile.dev  Makefile  foundry.toml  hardhat.config.ts  package.json  tsconfig.json
examples/01_randomness_callback/scripts/: create_example_function.ts
examples/01_randomness_callback/src/: ReceiverExample.sol  Recipient.sol
examples/01_randomness_callback/switchboard-function/: Cargo.dev.toml  Cargo.toml
examples/01_randomness_callback/switchboard-function/src/: main.rs
examples/01_randomness_callback/typechain-types/: Recipient.ts  hardhat.d.ts  index.ts
examples/02_user_triggered_callback/: Dockerfile  Makefile  README.md  hardhat.config.ts  package.json
examples/02_user_triggered_callback/scripts/: deploy_function_example.ts
examples/02_user_triggered_callback/src/: ISwitchboard.sol  Recipient.sol  UserInitializedReceiverExample.sol
examples/02_user_triggered_callback/switchboard-function/: Cargo.dev.toml  Cargo.toml
examples/02_user_triggered_callback/typechain-types/: ISwitchboard.ts  ReceiverExample.ts  UserInitializedReceiverExample.ts  hardhat.d.ts  index.ts
javascript/eth.js/: README.md  package-lock.json  package.json
javascript/eth.js/src/: sbv2.ts
javascript/evm-functions-bindings/: Cargo.toml  index.cjs  index.js  package.json
javascript/evm-functions-bindings/src/: lib.rs
javascript/evm.js/: README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
javascript/evm.js/contracts/: ISwitchboard.sol  ISwitchboardPush.sol  Switchboard.template.sol  SwitchboardCallbackHandler.sol
javascript/evm.js/src/: SBDecimal.ts  SwitchboardProgram.ts  const.ts  errors.ts  index.ts  ipfs.ts  parseMrEnclave.ts  sbv2.ts  sendTxnWithGas.ts  sendTxnWithOptions.ts  types.ts  utils.ts
javascript/evm.js/tests/: aptosdecimal.tests.ts  decimal.tests.ts  sbdecimal.ts
rust/switchboard-evm/: Cargo.toml  README.md  Switchboard.json  SwitchboardPushReceiver.json  package.json
rust/switchboard-evm/src/: lib.rs  sdk.rs  secrets.rs  test.rs  utils.rs
rust/switchboard-evm/src/bindings/: eip712.rs  error.rs  mod.rs  switchboard.rs
solidity/ILegacyOracle/: README.md
solidity/ISwitchboard/: ISwitchboard.sol  README.md
solidity/read-feed-aggregator-v3/: package-lock.json
solidity/read-feed-aggregator-v3/cache/: solidity-files-cache.json
solidity/read-feed-aggregator-v3/scripts/: deploy.ts
(+572 files in other folders)
